fix color color and spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -42,7 +42,6 @@ div#contact {
   margin: 0 auto;
   max-width: 75%;
   background-color: hsla(31, 70%, 80%, 0.5);
-  /*background-color: #FD1AA*/
   height: 1000px;
   padding: 5px 40px;
   border-radius: 15px;
@@ -82,6 +81,10 @@ nav button:hover {
 
 .header {
   text-align: center;
+  color: #004400;
+  -webkit-text-stroke: 1px #88CC88; 
+  text-shadow: 1px 1px 1px #fff, 1px 1px 1px #fff;
+  font-size: 40px;
 }
 
 .source {
@@ -100,20 +103,29 @@ nav button:hover {
   display: inline-block;
   width: 350px;
   height: 270px;
+  margin-top: 10px;
   margin-left: 40px;
   margin-right: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 }
 
 .menu-container h2 {
   color: #004400;
-  text-align:left;
+  text-align: left;
   -webkit-text-stroke: 1px #88CC88; 
+  text-shadow: 1px 1px 1px #fff, 1px 1px 1px #fff;
+  font-size: 27px;
+}
+
+.menu-container p {
+  color: #000000;
+  text-align: left;
+  font-size: 17px;
 }
 
 .item-container {
   display: inline-block;
-  margin-left: 260px;
+  margin-left: 230px;
   font-weight: bold;
 }
 
@@ -121,7 +133,7 @@ nav button:hover {
   display: inline-block;
   vertical-align: top;
   margin-left: 80px;
-  font-weight: bold
+  font-weight: bold;
 }
 
 .sixteen-oz-price {
